Tidy code formatting and switch to platformio.ini-based lib management

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,13 @@
 platform = espressif8266
 framework = arduino
 board = d1_mini
+monitor_speed = 115200
+lib_deps =
+    Adafruit_GFX
+    Adafruit_SSD1306
+    Arduino
+    ESP8266WiFi
+    SPI
+    WiFiManager
+    Wire
+    tinyxml2
